--- a/src/containers/calculator/keypad/Keypad.css
+++ b/src/containers/calculator/keypad/Keypad.css
@@ -1,16 +1,57 @@
 .Keypad{
-    height: 320px;
+    height: 400px;
+    display: flex; 
 }
 
 Button {
     width: 80px; 
     height: 80px; 
-    background-color: rgba(103, 106, 109, 1.00);
     outline: none;
-    border: none; 
+    border: none;
+    font-size: 1.6em;
+    color:rgba(236, 236, 237, 1.00);
+    border-right: 1px solid rgba(87, 91, 94, 1.00); 
+    border-top: 1px solid rgba(87, 91, 94, 1.00);
 }
 
 .UpperKeys {
     display: flex;
 }
 
+.UpperKey{
+    background-color: rgba(103, 106, 109, 1.00);
+    border-right: 1px solid rgba(87, 91, 94, 1.00); 
+    border-top: 1px solid rgba(87, 91, 94, 1.00);
+}
+
+.UpperKey:active{
+    background-color:rgba(128, 131, 133, 1.00);
+}
+
+.DigitKeys{
+    display:flex;
+    flex-wrap: wrap-reverse;
+}
+
+.DigitKey:active{
+    background-color: rgba(166, 167, 169, 1.00);
+    color: rgba(243, 243, 244, 1.00);
+}
+
+.DigitKey, .key0{
+    background-color: rgba(128, 131, 133, 1.00);
+}
+
+.key0{
+    width: 160px; 
+}
+
+.OperatorKey{
+    background-color: rgba(253, 158, 43, 1.00);
+    font-size: 2em; 
+}
+
+.OperatorKey:active{
+    background-color: rgba(201, 125, 32, 1.00);
+    color: rgba(246, 235, 221, 1.00);
+}
